Prevented content of EWF UI rounded-corner blocks from bleeding outside of the blocks.

--- a/Web Site/Ewf/Styles/EwfUi/Layout.css
+++ b/Web Site/Ewf/Styles/EwfUi/Layout.css
@@ -152,6 +152,9 @@ p, ul {
 }
 
 /* corner rounding */
+ewfSectionBoxStyleBothStates, ewfTableStandardAndStandardExceptLayoutStyles, ewfActionControlAllButtonStylesAllStates {
+	overflow: hidden;
+}
 ewfSectionBoxStyleBothStates, ewfTableStandardAndStandardExceptLayoutStyles, ewfActionControlLargeButtonStyleAllStates {
 	border-radius: .5em;
 }
